@@ -2,8 +2,8 @@
 # -*- coding: utf-8 -*-
 from __future__ import division, print_function, unicode_literals
 
-import os
-import os.path as op
+import pathlib
+import shutil
 import tempfile
 
 from dclab import new_dataset
@@ -15,7 +15,7 @@ from shapeout import meta_tool
 
 def test_collect_data_tree():
     features = ["area_um", "deform", "time"]
-    edest = tempfile.mkdtemp()
+    edest = pathlib.Path(tempfile.mkdtemp(prefix="shapeout_test"))
 
     for ii in range(1, 4):
         dat = new_dataset(data=example_data_dict(ii + 10, keys=features))
@@ -27,7 +27,7 @@ def test_collect_data_tree():
                          "flow rate": 0.04}
                }
         dat.config.update(cfg)
-        dat.export.hdf5(path=op.join(edest, "{}.rtdc".format(ii)),
+        dat.export.hdf5(path=edest / "{}.rtdc".format(ii),
                         features=features)
     data = meta_tool.collect_data_tree([edest])[0]
     assert len(data) == 1, "only one data folder"
@@ -40,6 +40,38 @@ def test_collect_data_tree():
     assert data[0][1][1].endswith("1.rtdc")
     assert data[0][2][1].endswith("2.rtdc")
     assert data[0][3][1].endswith("3.rtdc")
+    shutil.rmtree(str(edest), ignore_errors=True)
+
+
+def test_collect_data_tree_unicode():
+    features = ["area_um", "deform", "time"]
+    edest = pathlib.Path(tempfile.mkdtemp(prefix="shapeout_test_únícòdè".encode("utf-8")))
+
+    for ii in range(1, 4):
+        dat = new_dataset(data=example_data_dict(ii + 10, keys=features))
+        cfg = {"experiment": {"sample": "test sample",
+                              "run index": ii},
+               "imaging": {"pixel size": 0.34},
+               "setup": {"channel width": 20,
+                         "chip region": "channel",
+                         "flow rate": 0.04}
+               }
+        dat.config.update(cfg)
+        dat.export.hdf5(path=edest / "{}.rtdc".format(ii),
+                        features=features)
+    meta_tool.collect_data_tree([edest])[0]
+    shutil.rmtree(str(edest), ignore_errors=True)
+
+
+def test_event_count_cache_unicode():
+    # fhash = hashlib.md5(data + str(fname).encode("utf-8")).hexdigest()
+    edest = pathlib.Path(tempfile.mkdtemp(prefix="shapeout_test_únícòdè".encode("utf-8")))
+    path = retrieve_data("rtdc_data_traces_video.zip")
+    shutil.rmtree(str(edest))
+    path.parent.rename(edest)
+    tdmspath = meta_tool.find_data(edest)[0]
+    ec = meta_tool.get_event_count(tdmspath)
+    assert ec == 2
 
 
 def test_hdf5():
@@ -79,14 +111,14 @@ def test_tdms_avi():
 def test_tdms_avi2():
     path = retrieve_data("rtdc_data_traces_video.zip")
     # delete avi file  and get event count from tdms file
-    os.remove(str(path.parent / "M1_imaq.avi"))
+    (path.parent / "M1_imaq.avi").unlink()
     assert meta_tool.verify_dataset(path)
     cleanup()
 
 
 def test_verify():
     path = retrieve_data("rtdc_data_minimal.zip")
-    os.remove(str(path.parent / "M1_camera.ini"))
+    (path.parent / "M1_camera.ini").unlink()
     assert not meta_tool.verify_dataset(path)
     cleanup()
 
